GNOME Bugzilla – Bug 702094
seed_create_script: fix line_number param documentation
Last modified: 2013-06-13 08:44:14 UTC
seed_create_script takes an int for line_number, so it can't be passed NULL.
Created attachment 246643 [details] [review] seed_create_script: fix line_number param documentation
thanks - committed