seed_create_script: fix line_number param documentation

seed_create_script takes an int for line_number, so it can't
be passed NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=702094